[gd_scene load_steps=7 format=3 uid="uid://v34hi0c5game"]

[ext_resource type="Script" path="res://scene/instruction/InputOutput/WriteInstruction.gd" id="1_lvtqy"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="1_r7h0k"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="2_0sn6b"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="3_t16mr"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="4_xbpeh"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="5_ve4gb"]

[node name="WriteInstruction" type="Panel"]
script = ExtResource("1_lvtqy")

[node name="BaseRow" parent="." instance=ExtResource("1_r7h0k")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 1
grow_vertical = 1

[node name="BaseLine" parent="BaseRow" instance=ExtResource("2_0sn6b")]

[node name="Label" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Write"
script = ExtResource("3_t16mr")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("4_xbpeh")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 114.0
offset_bottom = 43.0
grow_horizontal = 1
grow_vertical = 1

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 43.0
offset_bottom = 26.0
text = "Write"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("5_ve4gb")]

[node name="Label2" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("5_ve4gb")]

[node name="Label3" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TextInput3" parent="BaseRow/BaseLineColor" instance=ExtResource("5_ve4gb")]
